--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -62,17 +62,17 @@ period=180000
 max.age.geospatial=72000
 
 # The number of minutes before the throttle is increased
-cpu.load.period=10
+cpu.load.period=3
 # Whether this listener is active and will modify the throttle
 cpu.load.active=true
 # The maximum load per cpu before the throttle is increased for all indexes
-cpu.load.threshold=1.0
+cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
 stemming.analyzer.stop.words=true
 
 # These parameters are for the Ikube documentation index
-ikube.url=http://localhost/ikube/app
-ikube.url.8080=http://localhost:8080/ikube/app
+ikube.url=http://localhost/ikube
+ikube.url.8080=http://localhost:8080/ikube
 ikube.url.8080.login=${ikube.url.8080}/admin/login.html
 
 # The H2 database credentials
