--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -42,7 +42,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=/tmp
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(media).*|.*(mnt).*|.*(michael).*|.*(backup).*|.*(Backup).*|.*(root).*|.*(/tmp).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(michael).*|.*(backup).*|.*(Backup).*|.*(root).*|.*(/tmp).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(/dev).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 language.word.lists.directory=./ikube/common/languages
@@ -68,7 +68,7 @@ cpu.load.active=true
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
-stemming.analyzer.stop.words=true
+stemming.analyzer.stop.words=false
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube
