--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -64,6 +64,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+					<groupId>de.saumya.mojo</groupId>
+					<artifactId>bundler-maven-plugin</artifactId>
+					<version>0.29.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.felix</groupId>
+					<artifactId>maven-bundle-plugin</artifactId>
+					<version>2.3.7</version>
+					<extensions>true</extensions>
+				</plugin>
 		</plugins>
 	</build>
 
