--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<!-- <module>code/web</module> -->
 		<!-- <module>code/gui</module> -->
 		<!-- <module>code/libs</module> -->
-		<module>code/tool</module>
+		<!-- <module>code/tool</module> -->
 	</modules>
 
 	<build>
@@ -162,6 +162,17 @@
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>de.saumya.mojo</groupId>
+					<artifactId>bundler-maven-plugin</artifactId>
+					<version>0.29.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.felix</groupId>
+					<artifactId>maven-bundle-plugin</artifactId>
+					<version>2.3.7</version>
+					<extensions>true</extensions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
