--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -56,8 +56,10 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/multi/spatial
 
 # The delay before the scheduled tasks start executing
 delay=15000
+delay-delta=180000
 # The period between notifications for timed tasks
 period=60000
+period-delta=36000000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
 
