Fixed the Apache input stream character encoding bug.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1092 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -42,8 +42,8 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=/tmp
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(michael).*|.*(backup).*|.*(Backup).*|.*(root).*|.*(/tmp).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(/dev).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(Backup).*
+internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*
 
 language.word.lists.directory=./ikube/common/languages
 language.word.lists.directory.index=./ikube/common/languages/index
@@ -56,7 +56,7 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/multi/spatial
 
 # The delay before the scheduled tasks start executing
 delay=15000
-delay-delta=180000
+delay-delta=30000
 # The period between notifications for timed tasks
 period=60000
 period-delta=36000000
@@ -66,7 +66,7 @@ max.age.geospatial=6000
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=true
+cpu.load.active=false
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
