--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<!-- <module>code/web</module> -->
 		<!-- <module>code/gui</module> -->
 		<!-- <module>code/libs</module> -->
-		<!-- <module>code/tool</module> -->
+		<module>code/tool</module>
 	</modules>
 
 	<build>
@@ -941,13 +941,6 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>de.schlichtherle</groupId>
-			<artifactId>truezip</artifactId>
-			<version>7.3.2</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.1</version>
@@ -1022,6 +1015,46 @@
 			<groupId>org.apache.openjpa</groupId>
 			<artifactId>openjpa-all</artifactId>
 			<version>2.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-kernel</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-file</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-path</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-extension-pace</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-driver-zip</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-driver-tzp</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-driver-http</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>de.schlichtherle.truezip</groupId>
+			<artifactId>truezip-driver-file</artifactId>
+			<version>7.7.1</version>
 		</dependency>
 	</dependencies>
 
