--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -78,6 +78,9 @@
 								<copy todir="ikube" failonerror="true">
 									<fileset dir="../core/src/main/resources/ikube" />
 								</copy>
+								<copy todir="../../ikube" failonerror="true">
+									<fileset dir="../core/src/main/resources/ikube" />
+								</copy>
 							</target>
 						</configuration>
 						<goals>
@@ -112,7 +115,7 @@
 					</connectors>
 				</configuration>
 				<executions>
-					<!-- <execution>
+					<execution>
 						<id>start-jetty</id>
 						<phase>pre-integration-test</phase>
 						<goals>
@@ -128,7 +131,7 @@
 						<goals>
 							<goal>stop</goal>
 						</goals>
-					</execution> -->
+					</execution>
 				</executions>
 				<dependencies>
 					<dependency>
