Got the strategy working for the file system handler.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1097 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -1056,6 +1056,11 @@
 			<artifactId>truezip-driver-file</artifactId>
 			<version>7.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-agent</artifactId>
+			<version>2.5.6</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
