--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -59,7 +59,7 @@ delay=120000
 delay-delta=180000
 # The period between notifications for timed tasks
 period=60000
-period-delta=36000000
+period-delta=60000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
 
