--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,7 @@
 				<version>2.6</version>
 				<configuration>
 					<forkMode>once</forkMode>
+					<argLine>-javaagent:${settings.localRepository}/org/springframework/spring-agent/2.5.6/spring-agent-2.5.6.jar</argLine>
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
@@ -1060,6 +1061,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-agent</artifactId>
 			<version>2.5.6</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
