--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -55,18 +55,18 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/multi/spatial
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=120000
-delay-delta=180000
+delay=600000
+delay-delta=610000
 # The period between notifications for timed tasks
-period=60000
-period-delta=60000
+period=600000
+period-delta=610000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
 
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=false
+cpu.load.active=true
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
