Updated the configuration and started the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1111 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -66,7 +66,7 @@ max.age.geospatial=6000
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=true
+cpu.load.active=false
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
