Refactored the handlers to use re-usable resource handlers that can be intercepted to execute strategies.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1124 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -36,12 +36,12 @@ filesystem.handler.threads=3
 email.handler.threads=3
 
 # These parameters are client specific
-url=http://ikokoon.ikube.cloudbees.net/index.html
-url.million=http://localhost:8080/million/adapt.html
+# url=http://ikokoon.ikube.cloudbees.net/index.html
+# url.million=http://localhost:8080/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=/tmp
+# files.path.million=/tmp
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(Backup).*|.*(/sys).*
 internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*
 
@@ -74,8 +74,8 @@ stemming.analyzer.stop.words=false
 
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube
-ikube.url.8080=http://localhost:8080/ikube
-ikube.url.8080.login=${ikube.url.8080}/admin/login.html
+# ikube.url.8080=http://localhost:8080/ikube
+# ikube.url.8080.login=${ikube.url.8080}/admin/login.html
 
 # The H2 database credentials
 h2.jdbc.userid=sa
